--- a/blocks/header.css
+++ b/blocks/header.css
@@ -1,7 +1,7 @@
 .header {
   color: hsl(233, 13%, 49%);
   margin: 3.3rem 0;
-  font-display: flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
