--- a/blocks/root.css
+++ b/blocks/root.css
@@ -1,12 +1,17 @@
+
 .root {
   font-family: "Montserrat Alternates", sans-serif;
   width: 100%;
   box-sizing: border-box;
   margin: 0 auto;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  overflow-x: hidden;
-  background: linear-gradient(to top right, #ccccff 0%, #ffffff 100%);
+  background: linear-gradient(to top, #ccccff 0%, #ffffff 100%);
+ 
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
+  text-rendering: optimizeLegibility;
 }
+
