--- a/blocks/circle.css
+++ b/blocks/circle.css
@@ -1,6 +1,10 @@
 .circle {
-    background-color: #fff;
-    height: 1.4rem;
-    width: 1.4rem;
-    border-radius: 50%;
+  background-color: #fff;
+  height: 1.4rem;
+  width: 1.4rem;
+  border-radius: 50%;
+}
+
+.circle:hover {
+  cursor: pointer;
 }
